# TFG-Wazuh-LLM

./: .env.example  .gitignore  Home.py  README.md  app.py  fase1.py  middleware.py  prueba.py  pyproject.toml
.streamlit/: config.toml
TFG_Wazuh_LLM.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pages/: 1_Alertas.py  2_Analisis_LLM.py  3_Threat_Hunting.py
prompts/: mitre_prompt.txt
wazuh_llm/: .env  middleware.py  middleware_antiguo.py  middleware_antiguo2.py  respuesta_activa.py  threat_hunting.py
