[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TFG-Wazuh-LLM"
version = "1.0.0"
authors = [
  { name="Máximo Martín Moreno", email="martinmorenomaximo@gmail.com" },
]
description = "Middleware para enriquecer alertas de Wazuh usando LLMs locales (Ollama)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "requests >= 2.32",
    "urllib3 >= 2.6",
    "python-dotenv >= 1.2"
]

[project.scripts]
wazuh-ia = "wazuh_llm.middleware:main"

[tool.setuptools]
packages = ["wazuh_llm"]