[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TFG-Wazuh-LLM"
version = "1.0.0"
authors = [
  { name="Maximo Martin Moreno", email="martinmorenomaximo@gmail.com" },
]
description = "Middleware para enriquecer alertas de Wazuh usando LLMs (Ollama, Gemini, Groq)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "requests >= 2.32",
    "urllib3 >= 2.6",
    "python-dotenv >= 1.2",
    "google-genai >= 0.8",
    "openai >= 1.0",
    "streamlit >= 1.35",
    "pandas >= 2.0",
]

[project.scripts]
wazuh-ia = "wazuh_llm.middleware:main"

[tool.setuptools]
packages = ["wazuh_llm"]